<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_Data_Struct" Id="{c4429ed7-e0ed-4d78-bb9e-67bc60209eab}">
    <Declaration><![CDATA[TYPE ST_Data_Struct :
	// Datastruct for MQTT messages
STRUCT
	name:STRING(255);
	value:REAL(255);
	topic:STRING(255);
	payload:STRING(255);
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>