<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="MQTT_Credentials" Id="{5f79638f-c8b3-4fb1-91a0-f6edc61e83c6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	sHostName :STRING := 'my.hostname.io'; // Host name 			IP: 116.203.44.193
	nHostPort :UINT:= 1111; // Host port
	sClientId :STRING:= 'My_Client'; // Client ID
	sTopicPrefix :STRING:= 'my/prefix/'; // Prefix for every MQTT topic
	nKeepAlive :UINT := 60;      // keep alive time in seconds
	sUserName :STRING:= 'my_username'; // User name
	sUserPassword:STRING := 'my_secret_password'; // User password
	sTlsVersion:STRING := 'tlsv1.2' ; // TLS version
	sCaPath:STRING:='path/to/file.pem';	// Path to client certificate (on the PLC)
	bNoServerCertCheck:BOOL:=TRUE; // True to check server certificate
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>
